[gd_scene load_steps=4 format=3 uid="uid://cd3avhvtg0qj8"]

[ext_resource type="Script" uid="uid://bvty5jaew0jar" path="res://addons/ExtraUIControls/tag_picker.gd" id="1_5w7x3"]
[ext_resource type="Texture2D" uid="uid://c25qyfqcmxij7" path="res://addons/ExtraUIControls/icons/icon_grouping.svg" id="1_75iko"]
[ext_resource type="PackedScene" uid="uid://dl27xojitjda0" path="res://addons/ExtraUIControls/search_component.tscn" id="2_5w7x3"]

[node name="PanelContainer" type="PanelContainer"]
custom_minimum_size = Vector2(300, 600)
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_5w7x3")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="match_all_or_any_button" type="CheckButton" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
button_pressed = true
text = "Match All"

[node name="not_button" type="CheckButton" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
button_pressed = true
text = "selected"

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="tag_search" parent="VBoxContainer" instance=ExtResource("2_5w7x3")]
unique_name_in_owner = true
layout_mode = 2

[node name="grouping_button" type="Button" parent="VBoxContainer/tag_search"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
toggle_mode = true
icon = ExtResource("1_75iko")
expand_icon = true

[node name="tags_tree" type="Tree" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
columns = 2
hide_root = true
select_mode = 1

[node name="add_tag_button" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "New Tag"
